--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box; */
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     width: 800px;
+    margin: 0 auto;
 }
 
 h1{
@@ -11,17 +12,24 @@ h1{
     color: white;
     background-color: brown;
     font-size: 40px;
+    margin-bottom: 30px;
+    padding: 10px 0px;
 }
 
 h3{
     color: brown;
     font-size: 25px;
+    margin: 15px 0px;
 }
 
 .recipe-link, a{
     color: brown;
     text-decoration: none;
     font-size: 40px;
+}
+
+li{
+    margin: 10px 0px;
 }
 
 a{
